--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
     <header>
         
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="email:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
+        
     </header>
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
-            <!-- h2 hidden Features -->
+            <h2 hidden> Features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -49,33 +52,33 @@
             </ul>
         </section>
         <section>
-            <h4>Our Team</h4>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h5>Mark Guerrero</h5>
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img1.jpg" alt="Tom Ford" width="264" height="260">
-                    <h5>Tom Ford</h5>
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img2.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h5>Camila Garcia</h5>
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h5>Daniel Wilson</h5>
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudij</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
