--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </nav>
         <address>
             <ul>
-                <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
         
@@ -78,7 +78,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudij</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
